packages/styles/src/components/type.scss
@forward './../variables/options';

@use 'sass:map';
@use 'sass:meta';

@use './../lic/bootstrap-license';
@use './../themes/bootstrap/core' as *;
@use './../themes/bootstrap/type' as bt;

@use './../variables/color';
@use './../variables/commons';
@use './../variables/type';
@use './../variables/heading';
@use './../variables/spacing';
@use './../variables/components/paragraph';
@use './../layouts/portal/type' as portal;
@use './../placeholders/text';
@use './../mixins/type' as type-mx;

// Deprecated
@each $key, $curve in type.$font-curves {
  .font-curve-#{$key} {
    @include type-mx.font-curve($key);
  }
}

// Generate heading sizes using the sizes map and the font-curve mixin
@each $heading in ('h1', 'h2', 'h3', 'h4', 'h5', 'h6') {
  #{$heading},
  .#{$heading} {
    @include type-mx.font-curve('heading-sizes-#{$heading}', heading.$heading-sizes);
  }
}

@each $key, $font-size in type.$font-size-map {
  .font-size-#{$key} {
    font-size: $font-size;

    // Font sizes bigger than 24px can have a reduced line height
    @if ($key >= 24) {
      line-height: type.$line-height-heading;
    }
  }
}

fieldset {
  legend {
    font-size: type.$font-size-18;
    font-weight: type.$font-weight-bold;
  }
}

.blockquote {
  margin-top: type.$blockquote-margin-top;

  p {
    @extend %font-curve-regular;

    &::before {
      content: '\00ab';
    }

    &::after {
      content: '\00bb';
    }

    &:lang(en) {
      &::before {
        content: '\0022';
      }

      &::after {
        content: '\0022';
      }
    }
  }

  &,
  &-footer {
    padding-left: type.$blockquote-padding-left;
    border-left: type.$blockquote-border-left;
    font-weight: type.$blockquote-font-weight;

    @include media-breakpoint-up(md) {
      border-left-width: type.$blockquote-border-left-width-md;
    }

    @include media-breakpoint-up(xxl) {
      padding-left: type.$blockquote-padding-left-xxl;
    }
  }

  &-footer {
    cite {
      @extend %font-curve-small;
      font-weight: type.$blockquote-cite-font-weight;
    }
  }
}

q {
  quotes: '\00ab' '\00bb' '\2039' '\203A';

  &:lang(en) {
    quotes: '\0022' '\0022' '\0027' '\0027';
  }
}

.text-body {
  @include portal.styles;
}

code {
  color: inherit;
  font-size: inherit;
}

hr {
  border-block-start-color: rgba(var(--post-contrast-color-rgb), 0.1);
}

